fixed spacing issues

--- a/styles/smallscreen.css
+++ b/styles/smallscreen.css
@@ -157,6 +157,7 @@ body,html{
     /* grid-column: 3/5;
     grid-row: 1/2; */
     padding: 0;
+    border-radius: 32px;
 }
 
 .map { position: absolute; top: 0; bottom: 0; width: 100%; height: 354px; border-radius: 32px; }
@@ -215,7 +216,7 @@ body,html{
 .spotify-info-container{
   grid-column: 1;
   grid-row: 3;
-  width: 180px;
+  width: 300px;
 
 }
 
